--- a/AccelerProject/css/style.css
+++ b/AccelerProject/css/style.css
@@ -42,6 +42,20 @@
 	height: 50px;
 }
 
+#saveButton {
+	font-size: 20px;
+	margin: 10px;
+	width: 40%;
+	height: 50px;
+}
+
+#loadButton {
+	font-size: 20px;
+	margin: 10px;
+	width: 40%;
+	height: 50px;
+}
+
 html,
 body {
     width: 100%;
